Schedule 관련 API 추가
