# src/swagger/schedule.yaml
@@ -1,9 +1,9 @@
 paths:
-  /movies/list:
+  /schedules/list:
     post:
       tags:
-        - 영화
-      summary: 영화 목록
+        - 상영 시간표
+      summary: 시간표 목록
       requestBody:
         required: true
         content:
@@ -12,16 +12,17 @@ paths:
               $ref: '#/components/schemas/SearchCondition'
             example:
               include:
-                title: 해리포터
+                movie:
+                  title: 해리포터
               exact:
-                genres: horror
-                actors: 유재석
-              exactOneOf: [{ title: 반지의 제왕 }, { actors: 유재석 }]
+                movie._id: abcdefg
+                movie:
+                  genres: comedy
+              exactOneOf: [{ movie: { genres: comedy } }, { movie: { actors: 유재석 } }]
               range:
-                createdAt: { gte: 2022-01-01, lte: 2022-12-31 }
+                startAt: { gte: 2022-01-01, lte: 2022-12-31 }
               sort:
-                createdAt: desc
-                title: asc
+                startAt: desc
       responses:
         200:
           description: 성공
@@ -36,13 +37,14 @@ paths:
                   list:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Movie'
+                      $ref: '#/components/schemas/Schedule'
 
-  /movies:
+  /schedules:
     post:
       tags:
-        - 영화
-      summary: 영화 등록
+        - 상영 시간표
+      summary: 시간표 등록
+      description: 시작/종료 시간 사이에 이미 같은 영화관에서 상영하고 있는 영화가 있다면 등록 불가
       requestBody:
         required: true
         content:
@@ -50,19 +52,17 @@ paths:
             schema:
               type: object
               properties:
-                title:
+                movieId:
                   type: string
-                description:
+                startAt:
                   type: string
-                  description: 최소 6자
-                actors:
-                  type: array
-                  items:
-                    type: string
-                genres:
-                  type: array
-                  items:
-                    type: string
+                  description: 상영 시작 시간
+                endAt:
+                  type: string
+                  description: 상영 종료 시간
+                theater:
+                  type: string
+                  description: 상영 영화관
       responses:
         200:
           description: 성공
@@ -72,14 +72,14 @@ paths:
                 type: object
                 $ref: '#/components/schemas/Movie'
 
-  /movies/{movieId}:
+  /schedules/{scheduleId}:
     get:
       tags:
-        - 영화
-      summary: 영화 조회
+        - 상영 시간표
+      summary: 시간표 조회
       parameters:
         - in: path
-          name: movieId
+          name: scheduleId
           schema:
             type: string
           required: true
@@ -89,4 +89,4 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Movie'
+                $ref: '#/components/schemas/Schedule'
